force-app/main/default/objects/custom_create179__c/custom_create179__c.object-meta.xml
<CustomObject>
    <label>Custom created object179</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects179</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>