force-app/main/default/objects/custom_create179__c/fields/custom_create_179field624__c.field-meta.xml
<CustomField>
    <fullName>custom_create_179field624__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 179field624</label>
    <type>Checkbox</type>
</CustomField>